* add new company

--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ header a:hover {
     width: 350px;
 }
 .title .grey{
-    margin-left: 30px;
+    /*margin-left: 30px;*/
 }
 .ava {
     border-radius: 50%;
