--- a/css/main.css
+++ b/css/main.css
@@ -133,7 +133,7 @@ header a:hover {
 .left.selfllery{
     height: 70px;
 }
-.left.selfllery img{
+.left.selfllery svg{
     max-width: 100%;
     max-height: 100%;
 }
