--- a/css/main.css
+++ b/css/main.css
@@ -136,6 +136,7 @@ header a:hover {
 .left.selfllery svg{
     max-width: 100%;
     max-height: 100%;
+    margin-left: -20px;
 }
 .experience .row:after{
     content: '';
