--- a/css/main.css
+++ b/css/main.css
@@ -168,6 +168,7 @@ header a:hover {
 
 .skills{
     border-top: 1px solid #6b7886;
+    border-bottom: 1px solid #6b7886;
     padding: 20px 0;
 }
 .skills ul{
@@ -191,7 +192,7 @@ header a:hover {
 
 .portfolio{
     padding: 10px 0;
-    background: #d5d2d2;
+    /*background: #d5d2d2;*/
     z-index: 3;
 }
 .portfolio a{
