--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,17 @@ a {
     text-decoration: none;
     color: inherit;
 }
+h3, b {
+    font-weight: 500;
+}
+
+li {
+    list-style: none;
+}
+ul {
+    padding-left: 0;
+}
+
 .container{
     width: 850px;
     margin: 0 auto;
@@ -30,7 +41,7 @@ a {
     color: #000;
 }
 .bold{
-    font-weight: 600;
+    font-weight: 500;
 }
 header {
     width: 100%;
@@ -132,38 +143,45 @@ header a:hover {
     border-top: 1px solid #6b7886;
     padding: 20px 0;
 }
-.experience h4{
+.experience h3{
     margin-top: 0;
-    margin-bottom: 15px;
+    margin-bottom: 0;
 }
 .experience .company{
     font-style: italic;
+    margin-bottom: 0;
 }
 .experience .black.bold{
     margin-left: 10px;
 }
 .experience .row{
-    padding: 25px 0 15px 0;
+    padding: 25px 10px;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
     position: relative;
+    width: 700px;
 }
 .develup svg{
     height: 50px;
 }
+.develup img{
+    height: 50px;
+}
 .left.selfllery{
-    height: 70px;
+    /*height: 60px;*/
+}
+.left.xovi img{
+    max-height: 55px;
 }
 .left.selfllery svg{
     max-width: 100%;
-    max-height: 100%;
-    margin-left: -20px;
+    height: 55px;
 }
 .experience .row:after{
     content: '';
     position: absolute;
-    width: 400px;
+    width: 100%;
     left: 10px;
     bottom: 0;
     height: 1px;
@@ -173,15 +191,47 @@ header a:hover {
     height: 0;
 }
 .experience .row .left{
-    width: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90px;
 }
 .experience .row .right{
-    width: 700px;
+    width: calc(100% - 140px);
+}
+.experience .description {
+    font-weight: 300;
+    font-size: 15px;
+    margin-bottom: 0;
+    width: calc(100% - 100px);
+    max-width: 400px;
+}
+.experience .description b {
+    color: #5f5f5f;
+}
+.experience .position-details {
+    font-size: 85%;
+    color: #5f5f5f;
+}
+.experience .position-time {
+    font-size: 12px;
+    position: absolute;
+    right: 0;
+    top: 45px;
+    margin-top: 0;
+}
+.experience .position-time-absolute {
+    margin-top: 5px;
+    font-weight: bold;
+    font-size: 14px;
+    position: absolute;
+    right: 0;
+    top: 20px;
 }
 
 .education{
     border-top: 1px solid #6b7886;
-    padding: 20px 0;
+    padding: 25px 0;
 }
 .onpu{
     height: 85px;
@@ -208,14 +258,16 @@ header a:hover {
 }
 .skills li{
     padding-left: 10px;
-    list-style: none;
-    width: 250px;
-    height: 35px;
+    width: 260px;
+    min-height: 35px;
     background: #f1f1f1;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     font-weight: bold;
+}
+.skills .soft-skills li {
+    width: 300px;
 }
 .skills li:nth-child(2n){
     background: #e8e8e8;
@@ -262,4 +314,19 @@ header a:hover {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+}
+
+
+#portfolio {
+    border-top: 1px solid #6b7886;
+    border-bottom: 1px solid #6b7886;
+    padding: 20px 0;
+}
+
+#portfolio li {
+    margin-top: 10px;
+}
+#portfolio a {
+    color: #4267b2;
+    border-bottom: 1px solid;
 }
