top section adjustments

--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,9 @@ header a {
 header a:hover {
     color: #fff902;
 }
-
+.name {
+    padding-left: 24px;
+}
 .title{
     display: flex;
     justify-content: space-between;
@@ -78,6 +80,9 @@ header a:hover {
 .specialization{
     font-size: 46px;
     margin-bottom: 0;
+}
+.title > .right {
+    padding-top: 115px;
 }
 .title .info {
     margin-left: 24px;
