--- a/css/main.css
+++ b/css/main.css
@@ -133,6 +133,15 @@ header a:hover {
 
 .about-me_text{
     line-height: 1.5;
+    font-size: 15px;
+    letter-spacing: 0.2px;
+}
+
+.about-me_text-inner {
+    margin-bottom: 5px;
+}
+.about-me_text-inner:nth-last-child(1) {
+    margin-bottom: 0;
 }
 
 .about-me_text__link{
