--- a/css/main.css
+++ b/css/main.css
@@ -137,7 +137,7 @@ header a:hover {
     letter-spacing: 0.2px;
     font-weight: 300;
 }
-.about-me_text strong {
+strong {
     font-weight: 500;
 }
 
